Feature: Improve async pulls and pushes with operations endpoint
